examples/test/testpolicy14185.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14185
  namespace: namespace9
spec:
  podSelector:
    matchLabels:
      key5: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value35
          key31: value30
      podSelector:
        matchLabels:
          key21: value0
          key25: value2
